added events skeleton and css page

--- a/events.html
+++ b/events.html
@@ -5,8 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="Stylesheet" href="events.css">
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1>Events</h1>
+    <section>
+        <div class="flex-container">
+          <a href="https://www.google.com" target="_blank"
+            ><img
+              class="section-img"
+              src="images/flower.jpg"
+              alt="flower-picture"
+          /></a>
+          <h2>Visit Dalat Flower Gardens</h2>
+          <p>
+            If you want to witness these firsthand then head to the Dalat Flower
+            Gardens which stretch for some 7,000 square meters and have more than
+            300 kinds of flowers on display.
+          </p>
+        </div>
+        <div class="flex-container">
+          <img class="section-img" src="images/dragon.jpg" alt="dragon-picture" />
+          <h2>Enjoy Linh Phuoc Pagoda</h2>
+          <p>
+            Linh Phuoc Pagoda is one of the most famous temples in the country, in
+            part thanks to its bell tower which stands at a height of 37 meters.
+            This makes it the tallest bell tower of its kind in all of Vietnam and
+            there is also a colorful central hall here which has a series of
+            murals that tell the story of the life of Buddha.
+          </p>
+        </div>
+        <div class="flex-container">
+          <img class="section-img" src="images/love.png" alt="datanla-picture" />
+          <h2>Spend the day at the Valley of Love</h2>
+          <p>
+            The Valley is Love is not a valley at all but actually a theme park
+            that is often visited by Vietnamese couples. The park is set amidst
+            lush green hills and backs on to lakes and gardens which are the
+            perfect spot to have a picnic. There is an amusement park here as well
+            that is staffed by locals dressed up as cowboys and you can even take
+            horse or pony rides or take a swan shaped pedal boat out on one of the
+            lakes.
+          </p>
+        </div>
+      </section>
 </body>
 </html>
