--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>Join our team!</header>
     <div class="contact">
         <form action="action_page.php">
       
