--- a/events.html
+++ b/events.html
@@ -5,20 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="Stylesheet" href="events.css">
+    <link rel="stylesheet" href="events.css"?>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/brands.min.css"
+      rel="stylesheet"
+    />
 </head>
 <body>
   <header>
-    <ul>
-      <li>Home</li>
-      <li>About</li>
-      <li>Events</li>
-      <li>contact</li>
-    </ul>
+    <nav>
+      <ul>
+          <div class="wname">
+              <li><a href="index.html">THE HELPING KITCHEN</a></li>
+          </div>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#menu">Menu</a></li>
+          <li><a href="#events">Events</a></li>
+          <li><a href="#contact">Contacts</a></li>
+      </ul>
+  </nav>
   </header>
 
     <section>
-      <h1>Events</h1>
+      <h1>Upcoming Events</h1>
         <p class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit labore eius aperiam dolorem doloribus rem quaerat et deleniti sunt. Minima enim rem velit provident fugit eum harum eos, mollitia laudantium!</p>
         <div class="flex-container">
           <a href="https://www.google.com" target="_blank"
@@ -47,5 +57,11 @@
           </p>
         </div>
       </section>
-</body>
-</html>
+      <footer class="footer">
+        <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>  
+        <a href="https://www.snapchat.com" target="_blank"><i class="fab fa-snapchat"></i></a>  
+        <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>  
+        <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a> 
+    </footer>
+    </body>
+  </html>
